<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif"
        android:hint="@string/point_name"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif"
        android:hint="@string/n_coordinate"
        android:inputType="number|numberDecimal"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif"
        android:hint="@string/e_coordinate"
        android:inputType="number|numberDecimal"
        android:importantForAutofill="no" />
</LinearLayout>