<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/append"
        android:icon="@drawable/ic_baseline_add_24_white"
        android:title="@string/append"
        app:showAsAction="ifRoom" />
</menu>